--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "env-cmd -f ./config/dev.env nodemon src/app.js",
+    "start": "node src/app.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
